--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -17,179 +17,285 @@
 
 /* WE_DO part start */
 #WE_Do {
-  padding-top: 180px;
-  position: relative;
-  z-index: 1;
-  .container {
-    .box_wrapper {
-      position: relative;
-      max-width: 570px;
-      height: 435px;
-      margin: auto;
+	padding-top: 180px;
+	position: relative;
+	z-index: 1;
+	.container {
+		.box_wrapper {
+			.card_box {
+				position: relative;
+				max-width: 565px;
+				height: 435px;
+				transform-style: preserve-3d;
+				margin: auto;
+				&:hover {
+					.face {
+						&.front_part {
+							transform: perspective(500px) rotateY(180deg);
+						}
+						&.back_part {
+							transform: perspective(500px) rotateY(360deg);
+						}
+					}
+				}
+				.face {
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+					transform-style: preserve-3d;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					transition: 0.9s ease-in-out;
+					backface-visibility: hidden;
+					transform: perspective(1500px) rotateY(0deg);
+					border: 2px solid #707070;
 
-      .card_box {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        transform-style: preserve-3d;
-        transition: all 0.9s ease-in-out;
-        border: 1.5px solid $black;
-        background-color: #fff;
-        .front_part {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          backface-visibility: hidden;
-          display: flex;
-          align-items: center;
+					&.front_part {
+						background: #ffffff;
+						h2 {
+							font-size: 84px;
+							line-height: 110px;
+							text-align: center;
+							font-family: $oswald;
+							text-transform: uppercase;
+							@media (max-width: 575px) {
+								font-size: 66px;
+								line-height: 90px;
+							}
 
-          h2 {
-            font-size: 84px;
-            line-height: 110px;
-            text-align: center;
-            font-family: $oswald;
-            text-transform: uppercase;
+							@media (max-width: 480px) {
+								font-size: 52px;
+								line-height: 76px;
+							}
+						}
+					}
+					&.back_part {
+						background: #3e424b;
+						color: #fff;
+						transform: perspective(1500px) rotateY(180deg);
+						padding: 0px 30px;
+						.box_title {
+							h2 {
+								font-size: 46px;
+								line-height: 55px;
+								text-transform: uppercase;
+								color: $white;
+								font-family: $oswald;
+								margin-bottom: 32px;
 
-            @media (max-width: 575px) {
-              font-size: 66px;
-              line-height: 90px;
-            }
+								@media (max-width: 575px) {
+									font-size: 30px;
+									line-height: 42px;
+									margin-bottom: 26px;
+								}
 
-            @media (max-width: 480px) {
-              font-size: 52px;
-              line-height: 76px;
-            }
-          }
-        }
+								@media (max-width: 480px) {
+									font-size: 20px;
+								}
+							}
 
-        .back_part {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          backface-visibility: hidden;
-          background: $black;
-          transform: rotateY(180deg);
-          display: flex;
-          align-items: center;
+							p {
+								font-size: 16px;
+								line-height: 38px;
+								color: $gray;
+								margin-bottom: 40px;
 
-          .box_title {
-            padding: 50px;
+								@media (max-width: 575px) {
+									line-height: 32px;
+								}
+							}
 
-            h2 {
-              font-size: 46px;
-              line-height: 55px;
-              text-transform: uppercase;
-              color: $white;
-              font-family: $oswald;
-              margin-bottom: 32px;
+							a {
+								font-size: 12px;
+								line-height: 14px;
+								text-transform: uppercase;
+								color: $white;
+								font-family: 'Poppins', sans-serif;
+								font-weight: $semi_bold;
 
-              @media (max-width: 575px) {
-                font-size: 30px;
-                line-height: 42px;
-                margin-bottom: 26px;
-              }
+								img {
+									@media (max-width: 575px) {
+										width: 22px !important;
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+		// .box_wrapper {
+		//   position: relative;
+		//   max-width: 570px;
+		//   height: 435px;
+		//   margin: auto;
 
-              @media (max-width: 480px) {
-                font-size: 20px;
-              }
-            }
+		//   .card_box {
+		//     position: absolute;
+		//     width: 100%;
+		//     height: 100%;
+		//     transform-style: preserve-3d;
+		//     transition: all 0.9s ease-in-out;
+		//     border: 1.5px solid $black;
+		//     background-color: #fff;
+		//     .front_part {
+		//       position: absolute;
+		//       width: 100%;
+		//       height: 100%;
+		//       backface-visibility: hidden;
+		//       display: flex;
+		//       align-items: center;
 
-            p {
-              font-size: 16px;
-              line-height: 38px;
-              color: $gray;
-              margin-bottom: 40px;
+		//       h2 {
+		//         font-size: 84px;
+		//         line-height: 110px;
+		//         text-align: center;
+		//         font-family: $oswald;
+		//         text-transform: uppercase;
 
-              @media (max-width: 575px) {
-                line-height: 32px;
-              }
-            }
+		//         @media (max-width: 575px) {
+		//           font-size: 66px;
+		//           line-height: 90px;
+		//         }
 
-            a {
-              font-size: 12px;
-              line-height: 14px;
-              text-transform: uppercase;
-              color: $white;
-              font-family: 'Poppins', sans-serif;
-              font-weight: $semi_bold;
+		//         @media (max-width: 480px) {
+		//           font-size: 52px;
+		//           line-height: 76px;
+		//         }
+		//       }
+		//     }
 
-              img {
-                @media (max-width: 575px) {
-                  width: 22px !important;
-                }
-              }
-            }
-          }
-        }
+		//     .back_part {
+		//       position: absolute;
+		//       width: 100%;
+		//       height: 100%;
+		//       backface-visibility: hidden;
+		//       background: $black;
+		//       transform: rotateY(180deg);
+		//       display: flex;
+		//       align-items: center;
 
-        &:hover {
-          transform: rotateY(180deg);
-          border: transparent;
-        }
-      }
-    }
+		//       .box_title {
+		//         padding: 50px;
 
-    .mb-30 {
-      margin-bottom: 30px;
+		//         h2 {
+		//           font-size: 46px;
+		//           line-height: 55px;
+		//           text-transform: uppercase;
+		//           color: $white;
+		//           font-family: $oswald;
+		//           margin-bottom: 32px;
 
-      @media (max-width: 1024px) {
-      }
-    }
-  }
-  .round_shape_img {
-    position: absolute;
-    left: 55%;
-    bottom: -900px;
-    pointer-events: none;
-    z-index: -1;
-    img {
-      pointer-events: none;
-      z-index: -1;
-      max-width: 100%;
-      object-fit: contain;
-    }
-  }
+		//           @media (max-width: 575px) {
+		//             font-size: 30px;
+		//             line-height: 42px;
+		//             margin-bottom: 26px;
+		//           }
+
+		//           @media (max-width: 480px) {
+		//             font-size: 20px;
+		//           }
+		//         }
+
+		//         p {
+		//           font-size: 16px;
+		//           line-height: 38px;
+		//           color: $gray;
+		//           margin-bottom: 40px;
+
+		//           @media (max-width: 575px) {
+		//             line-height: 32px;
+		//           }
+		//         }
+
+		//         a {
+		//           font-size: 12px;
+		//           line-height: 14px;
+		//           text-transform: uppercase;
+		//           color: $white;
+		//           font-family: 'Poppins', sans-serif;
+		//           font-weight: $semi_bold;
+
+		//           img {
+		//             @media (max-width: 575px) {
+		//               width: 22px !important;
+		//             }
+		//           }
+		//         }
+		//       }
+		//     }
+
+		//     &:hover {
+		//       transform: rotateY(180deg);
+		//       border: transparent;
+		//     }
+		//   }
+		// }
+
+		.mb-30 {
+			margin-bottom: 30px;
+
+			@media (max-width: 1024px) {
+			}
+		}
+	}
+	.round_shape_img {
+		position: absolute;
+		left: 55%;
+		bottom: -900px;
+		pointer-events: none;
+		z-index: -1;
+		img {
+			pointer-events: none;
+			z-index: -1;
+			max-width: 100%;
+			object-fit: contain;
+		}
+	}
 }
 
 /* WE_DO part end */
 
 /* brand_area part start */
 #brand_area {
-  padding-top: 20px;
-  padding-bottom: 200px;
-  position: relative;
-  z-index: 1;
-  .container {
-    .brand_slider {
-      .single_brand {
-        img {
-          margin: auto;
-        }
-      }
-    }
-  }
+	padding-top: 20px;
+	padding-bottom: 200px;
+	position: relative;
+	z-index: 1;
+	.container {
+		.brand_slider {
+			.single_brand {
+				img {
+					margin: auto;
+				}
+			}
+		}
+	}
 }
 
 .pb-5 {
-  padding-bottom: 5px !important;
+	padding-bottom: 5px !important;
 }
 
 .mb-30 {
-  margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
 .mt-50 {
-  margin-top: 50px;
+	margin-top: 50px;
 }
 
 .mb-50 {
-  margin-bottom: 50px;
+	margin-bottom: 50px;
 }
 .mt-100 {
-  margin-top: 100px;
+	margin-top: 100px;
 }
 .mb-100 {
-  margin-bottom: 100px;
+	margin-bottom: 100px;
 }
 
 /* brand_area part end */
