--- a/assets/scss/_works.scss
+++ b/assets/scss/_works.scss
@@ -1,110 +1,115 @@
 #work {
-  position: relative;
-  padding-top: 175px;
-  padding-bottom: 0;
+	position: relative;
+	padding-top: 175px;
+	padding-bottom: 0;
+	.section_title {
+		h2 {
+			padding-bottom: 75px;
+		}
+	}
+	.work_content {
+		.portfolio_img {
+			margin-bottom: 100px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+		.tab-text {
+			p {
+				font-size: 16px;
+				line-height: 38px;
+				color: #3e424b;
+				margin: 0;
+			}
+		}
 
-  .work_content {
+		.work_tab {
+			ul {
+				justify-content: flex-end;
+			}
+			.nav-pills .nav-link {
+				font-size: 16px;
+				color: #7a849a;
+				background-color: transparent;
+				text-transform: capitalize;
+				position: relative;
+				padding: 0;
+				margin-left: 50px;
 
-    .portfolio_img {
-      margin-bottom: 100px;
-    }
-    .tab-text {
-      p {
-        font-size: 16px;
-        line-height: 38px;
-        color: #3e424b;
-        margin: 0;
-      }
-    }
+				&::before {
+					position: absolute;
+					content: '';
+					width: 0;
+					height: 2px;
+					background: #5787ff;
+					bottom: -13px;
+					left: 0;
+					border-radius: 3px;
+					transition: 0.3s;
+					-webkit-transition: 0.3s;
+					-moz-transition: 0.3s;
+					-ms-transition: 0.3s;
+					-o-transition: 0.3s;
+					-webkit-border-radius: 3px;
+					-moz-border-radius: 3px;
+					-ms-border-radius: 3px;
+					-o-border-radius: 3px;
+				}
 
-    .work_tab {
-      ul {
-        justify-content: flex-end;
-      }
-      .nav-pills .nav-link {
-        font-size: 16px;
-        color: #7a849a;
-        background-color: transparent;
-        text-transform: capitalize;
-        position: relative;
-        padding: 0;
-        margin-left: 50px;
+				&.nav-link.active {
+					&::before {
+						width: 100%;
+					}
+				}
+			}
+		}
+	}
 
-        &::before {
-          position: absolute;
-          content: '';
-          width: 0;
-          height: 2px;
-          background: #5787ff;
-          bottom: -13px;
-          left: 0;
-          border-radius: 3px;
-          transition: 0.3s;
-          -webkit-transition: 0.3s;
-          -moz-transition: 0.3s;
-          -ms-transition: 0.3s;
-          -o-transition: 0.3s;
-          -webkit-border-radius: 3px;
-          -moz-border-radius: 3px;
-          -ms-border-radius: 3px;
-          -o-border-radius: 3px;
-        }
+	.project_img {
+		img {
+			width: 100%;
+			height: 400px;
+			object-fit: cover;
+		}
+	}
 
-        &.nav-link.active {
-          &::before {
-            width: 100%;
-          }
-        }
-      }
-    }
-  }
+	.project_info {
+		@media (max-width: 991px) {
+			margin-top: 16px;
+		}
+		span {
+			font-size: 12px;
+			line-height: 14px;
+			color: #7a849a;
+		}
 
-  .project_img {
-    img {
-      width: 100%;
-      height: 400px;
-      object-fit: cover;
-     
-    }
-  }
+		h3 {
+			color: #3e424b;
+			font-size: 46px;
+			font-weight: 600;
+			font-family: 'Oswald', sans-serif;
+			padding-bottom: 42px;
+			line-height: 55px;
+			margin: 0;
+		}
 
-  .project_info {
-    @media(max-width: 991px ){ 
-      margin-top: 16px;
-    }
-    span {
-      font-size: 12px;
-      line-height: 14px;
-      color: #7a849a;
-    }
-
-    h3 {
-      color: #3e424b;
-      font-size: 46px;
-      font-weight: 600;
-      font-family: 'Oswald', sans-serif;
-      padding-bottom: 42px;
-      line-height: 55px;
-      margin: 0;
-    }
-
-    .v_project {
-      color: $black;
-      line-height: 14px;
-      font-size: 12px;
-      letter-spacing: 3px;
-      font-weight: $semi_bold;
-      text-transform: uppercase;
-    }
-  }
-  .round_shape_img {
-    position: absolute;
-    z-index: -1;
-    pointer-events: none;
-    right: 0;
-    top: 9.9%;
-    img {
-      max-width: 100%;
-    }
-  }
+		.v_project {
+			color: $black;
+			line-height: 14px;
+			font-size: 12px;
+			letter-spacing: 3px;
+			font-weight: $semi_bold;
+			text-transform: uppercase;
+		}
+	}
+	.round_shape_img {
+		position: absolute;
+		z-index: -1;
+		pointer-events: none;
+		right: 0;
+		top: 0%;
+		img {
+			max-width: 100%;
+		}
+	}
 }
