--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,11 +19,6 @@ a:focus {
   outline: none !important;
 }
 
-button, button:hover, button:focus {
-  border: none;
-  outline: none;
-}
-
 /* container */
 @media (min-width: 1440px) {
   .container {
@@ -213,6 +208,91 @@ input:required {
 
 .mb-70 {
   margin-bottom: 70px;
+}
+
+.zakirSoft__button {
+  padding: 15px 20px;
+  background-color: transparent;
+  border: 1px solid #3e424b;
+}
+
+.zakirSoft__button:focus {
+  outline: none;
+}
+
+.zakirSoft__button a {
+  font-size: 12px;
+  line-height: 14px;
+  font-weight: 600;
+  color: #3e424b;
+  text-transform: uppercase;
+}
+
+.zakirSoft__button a span {
+  margin-left: 8px;
+}
+
+.zakirSoft__button_primary {
+  background-color: #5787ff;
+  border: 0;
+}
+
+.zakirSoft__button_primary a {
+  color: #fff;
+}
+
+.section__title {
+  font-family: 'Oswald', sans-serif;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.section__title_one {
+  font-size: 84px;
+  line-height: 110px;
+  font-weight: 700;
+  margin: auto;
+  color: transparent;
+  -webkit-text-stroke: 1.5px #7a849a;
+  text-transform: capitalize;
+}
+
+.section__title_two {
+  font-size: 62px;
+  line-height: 74px;
+  color: #3e424b;
+  font-weight: 600;
+  margin: auto;
+}
+
+.section__brief {
+  font-size: 16px;
+  line-height: 24px;
+  color: #7a849a;
+  max-width: 50%;
+  margin: auto;
+  text-align: center;
+}
+
+@media (max-width: 767px) {
+  .section__brief {
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 575px) and (max-width: 767px) {
+  .section__title {
+    font-size: 58px;
+    line-height: 72px;
+  }
+}
+
+@media (max-width: 574px) {
+  .section__title {
+    font-size: 38px;
+    line-height: 56px;
+    margin-bottom: 15px;
+  }
 }
 
 /* ?? part start */
@@ -1752,6 +1832,677 @@ header .container .head_content .menu .m_bar li:first-child {
   padding-bottom: 30px !important;
 }
 
+.newsDetails {
+  padding-bottom: 100px;
+}
+
+.newsDetails__banner {
+  background: url("../images/banner/newsDetails.png") center center/cover no-repeat;
+  height: 750px;
+  position: relative;
+}
+
+.newsDetails__banner::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.384);
+}
+
+.newsDetails__title {
+  font-size: 62px;
+  line-height: 74px;
+  font-weight: 600;
+  font-family: 'Oswald', sans-serif;
+  margin: 30px 0px;
+}
+
+.newsDetails__brief {
+  font-size: 20px;
+  line-height: 32px;
+  color: #7a849a;
+  max-width: 65%;
+}
+
+/* 
+=================
+ ** Responsive **
+=================
+*/
+@media (max-width: 1199px) {
+  .newsDetails__brief {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 991px) {
+  .newsDetails__banner {
+    height: 75vh;
+  }
+}
+
+@media (max-width: 767px) {
+  .newsDetails__title {
+    font-size: 48px;
+    line-height: 56px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 574px) {
+  .newsDetails__banner {
+    height: 25vh;
+  }
+  .newsDetails__title {
+    font-size: 32px;
+    line-height: 46px;
+  }
+}
+
+.articles {
+  background-color: #f2f2f2;
+  padding: 100px 0px;
+}
+
+.articles .section__title {
+  margin-bottom: 40px;
+}
+
+.articles__contentBox {
+  border: 0;
+  box-shadow: -3px 2px 10px -15px rgba(0, 0, 0, 0.178);
+  transform: translateY(0);
+  transition: all 0.2s linear;
+  cursor: context-menu;
+  margin-bottom: 30px;
+}
+
+.articles__contentBox:hover {
+  transform: translateY(-10px);
+}
+
+.articles__contentImg img {
+  width: 100%;
+  height: auto;
+}
+
+.articles__contentText {
+  padding: 20px;
+}
+
+.articles__title {
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 600;
+  text-transform: capitalize;
+  color: #3e424b;
+}
+
+.articles__brief {
+  font-size: 14px;
+  line-height: 21px;
+  color: #7a849a;
+}
+
+.articles__readMore {
+  font-size: 12px;
+  line-height: 14px;
+  font-weight: 600;
+  color: #3e424b;
+  text-transform: uppercase;
+}
+
+.articles__readMore:hover {
+  color: #3e424b;
+}
+
+.articles__readMore span {
+  margin-left: 5px;
+}
+
+/* 
+=================
+ ** Responsive **
+=================
+*/
+.careerTeam {
+  padding: 100px 0px;
+  background-color: #fff;
+}
+
+.careerTeam__contentText {
+  margin-top: 90px;
+}
+
+.careerTeam__title {
+  font-size: 84px;
+  line-height: 109px;
+  color: #3e424b;
+  font-weight: 700;
+  font-family: 'Oswald', sans-serif;
+}
+
+.careerTeam__brief {
+  font-size: 20px;
+  line-height: 32px;
+  color: #7a849a;
+  margin-bottom: 30px;
+  max-width: 85%;
+}
+
+/* 
+=================
+ ** Responsive **
+=================
+*/
+@media (max-width: 767px) {
+  .careerTeam__contentImg img {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 574px) {
+  .careerTeam__title {
+    font-size: 48px;
+    line-height: 56px;
+  }
+  .careerTeam__brief {
+    font-size: 18px;
+    line-height: 32px;
+    max-width: 100%;
+  }
+  .careerTeam__contentImg img {
+    max-width: 100%;
+  }
+}
+
+.careerDetails {
+  padding: 100px 0px;
+}
+
+.careerDetails__container {
+  width: 1170px;
+  padding: 0px;
+}
+
+.careerDetails__postTitleBox {
+  text-align: center;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #e2e3e4;
+  padding-top: 100px;
+}
+
+.careerDetails__title {
+  font-size: 84px;
+  line-height: 109px;
+  font-weight: 700;
+  color: #3e424b;
+  font-family: 'Oswald', sans-serif;
+}
+
+.careerDetails__type {
+  font-size: 20px;
+  line-height: 28px;
+  color: #7a849a;
+  margin-top: 10px;
+  margin-bottom: 18px;
+}
+
+.careerDetails__type .type,
+.careerDetails__type .range {
+  font-weight: 600;
+  color: #3e424b;
+}
+
+.careerDetails__type .point {
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: #3e424b;
+  margin: 0px 12px;
+  margin-bottom: 5px;
+}
+
+.careerDetails__contentBox {
+  padding: 50px 0px 0px 0px;
+  max-width: 775px;
+  margin: auto;
+}
+
+.careerDetails__contentBox-title {
+  font-size: 32px;
+  line-height: 38px;
+  font-weight: 600;
+  color: #3e424b;
+  margin-bottom: 16px;
+}
+
+.careerDetails__contentBox-brief, .careerDetails__contentBox-salery, .careerDetails__contentBox-location {
+  font-size: 16px;
+  line-height: 24px;
+  color: #3e424b;
+}
+
+.careerDetails__contentBox-point {
+  margin-left: 30px !important;
+}
+
+.careerDetails__contentBox-point li {
+  list-style-type: disc;
+  margin-bottom: 12px;
+}
+
+.careerDetails__contentBox-point li span {
+  font-size: 16px;
+  line-height: 24px;
+  color: #3e424b;
+}
+
+.careerDetails__go {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+}
+
+/* 
+=================
+ ** Responsive **
+=================
+*/
+@media (max-width: 991px) {
+  .careerDetails__contentBox {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 575px) {
+  .careerDetails__container {
+    max-width: 100%;
+  }
+  .careerDetails__contentBox {
+    margin: 0px 15px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 574px) {
+  .careerDetails__title {
+    font-size: 42px;
+    line-height: 56px;
+  }
+  .careerDetails__contentBox {
+    padding: 30px 0px 0px 0px;
+  }
+}
+
+.gallery {
+  padding: 100px 0px;
+}
+
+.gallery .section__title {
+  margin-bottom: 15px;
+}
+
+.gallery__itemContents {
+  margin-top: 40px;
+}
+
+.gallery .mt-20 {
+  margin-top: 20px;
+}
+
+@media (max-width: 767px) {
+  .gallery__item {
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+  }
+  .gallery__item img {
+    max-width: 380px;
+  }
+  .gallery__item .mt-20 {
+    margin-top: 0px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 574px) {
+  .gallery {
+    padding-bottom: 0px;
+  }
+  .gallery__item img {
+    max-width: 100%;
+  }
+}
+
+.perks {
+  background-color: #fafafa;
+  padding: 100px 0px;
+}
+
+.perks .section__title {
+  margin-bottom: 15px;
+}
+
+.perks__benefitsBoxes {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  margin-top: 45px;
+  box-shadow: 0px 10px 60px -12px rgba(0, 0, 0, 0.192);
+  padding: 0;
+  width: 100%;
+}
+
+.perks__benefitsBoxes .box {
+  background-color: #fff;
+  padding: 25px;
+  border: 1px solid transparent;
+  border-right: 1px solid #e2e3e4;
+  text-align: center;
+  transform: scale(1);
+  transition: all 0.2s linear;
+}
+
+.perks__benefitsBoxes .box:hover {
+  border-right: 1px solid #e2e3e4;
+  transform: scale(1.2);
+  box-shadow: 0px 20px 41px -24px rgba(0, 0, 0, 0.64);
+}
+
+.perks__benefitsBoxes .box img {
+  margin-bottom: 18px;
+}
+
+.perks__benefitsBoxes .box__title {
+  font-size: 20px;
+  line-height: 28px;
+  color: #3e424b;
+  font-weight: 600;
+}
+
+.perks__benefitsBoxes .box:nth-child(5) {
+  border-right: 0px;
+}
+
+/* 
+=================
+ ** Responsive **
+=================
+*/
+@media (max-width: 1199px) {
+  .perks__benefitsBoxes {
+    grid-template-columns: repeat(2, 1fr);
+    box-shadow: none;
+  }
+  .perks__benefitsBoxes .box {
+    border: 1px solid #3e424b2c;
+  }
+  .perks__benefitsBoxes .box:hover {
+    transform: scale(0.9);
+  }
+  .perks__benefitsBoxes .box:nth-child(5) {
+    border-right: 1px solid #3e424b2c;
+  }
+}
+
+@media (max-width: 767px) {
+  .perks__container {
+    max-width: 95%;
+  }
+}
+
+@media (max-width: 574px) {
+  .perks__benefitsBoxes {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .perks__benefitsBoxes .box {
+    margin-bottom: 15px;
+  }
+}
+
+.positions {
+  padding: 100px 0px;
+}
+
+.positions .section__title {
+  margin-bottom: 15px;
+}
+
+.positions__item {
+  margin-top: 40px;
+  width: 100%;
+}
+
+.positions__contentBox {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #e2e3e4;
+  padding-top: 40px;
+  padding-bottom: 30px;
+}
+
+.positions__contentBox:nth-child(3) {
+  border-bottom: 0px;
+}
+
+.positions__title {
+  font-size: 32px;
+  line-height: 38px;
+  font-weight: 600;
+  color: #3e424b;
+  text-transform: capitalize;
+}
+
+.positions__type {
+  font-size: 20px;
+  line-height: 28px;
+  color: #7a849a;
+  margin-top: 10px;
+  margin-bottom: 18px;
+}
+
+.positions__type .type,
+.positions__type .range {
+  font-weight: 600;
+  color: #3e424b;
+}
+
+.positions__type .point {
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: #3e424b;
+  margin: 0px 12px;
+  margin-bottom: 5px;
+}
+
+.positions__responsiblity {
+  font-size: 20px;
+  line-height: 28px;
+  color: #7a849a;
+}
+
+/* 
+=================
+ ** Responsive **
+=================
+*/
+@media (max-width: 767px) {
+  .positions__container {
+    max-width: 95%;
+  }
+  .positions__contentBox {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .positions__right button {
+    margin-top: 30px;
+  }
+  .positions__type {
+    margin-top: 30px;
+    margin-bottom: 15px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 574px) {
+  .positions__type {
+    font-size: 18px;
+    line-height: 28px;
+    margin-top: 30px;
+  }
+  .positions__responsiblity {
+    font-size: 16px;
+    line-height: 28px;
+  }
+}
+
+.latestProject {
+  margin: 100px 0px;
+}
+
+.latestProject__container {
+  background-color: #eef3ff;
+  padding: 70px 50px;
+}
+
+.latestProject__logo img {
+  width: 182px;
+}
+
+.latestProject__logo_codeshikhi img {
+  width: 122px;
+}
+
+.latestProject__title {
+  font-size: 62px;
+  line-height: 74px;
+  color: #3e424b;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 600;
+  margin: 10px 0px;
+}
+
+.latestProject__projectInfo {
+  display: flex;
+  align-items: center;
+  margin: 25px 0px;
+}
+
+.latestProject__info {
+  margin-right: 75px;
+}
+
+.latestProject__info h5 {
+  font-size: 20px;
+  line-height: 44px;
+  color: #3e424b;
+  font-weight: 600;
+  margin: 0;
+}
+
+.latestProject__info p {
+  font-size: 16px;
+  line-height: 26px;
+  color: #3e424b;
+  margin: 0;
+  font-weight: 400;
+  font-family: 'Poppins', sans-serif;
+}
+
+.latestProject__brief {
+  font-size: 16px;
+  line-height: 26px;
+  color: #7a849a;
+  margin: 35px 0px;
+}
+
+.latestProject__imgContent img {
+  width: 768px;
+  height: 430px;
+}
+
+.latestProject__imgContent_one img {
+  margin-left: -25px;
+}
+
+.latestProject__imgContent_two img {
+  margin-left: -225px;
+}
+
+/* 
+=================
+ ** Responsive **
+=================
+*/
+@media (min-width: 1200px) and (max-width: 1850px) {
+  .latestProject__imgContent_one img {
+    margin-left: -80px;
+  }
+  .latestProject__imgContent_two img {
+    margin-left: -170px;
+  }
+  .latestProject__contentText_two {
+    margin-left: 100px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .latestProject__imgContent_one img {
+    margin-left: -70px;
+  }
+  .latestProject__imgContent_two img {
+    margin-left: -70px;
+  }
+  .latestProject__imgContent img {
+    width: 650px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .latestProject__imgContent img {
+    max-width: 100%;
+    height: auto;
+    margin-top: 145px;
+    margin-left: 0px;
+  }
+  .latestProject__contentText__two {
+    margin-left: 0px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .latestProject__imgContent_one img {
+    margin-left: 15px;
+  }
+  .latestProject__imgContent_two {
+    margin-right: 15px;
+  }
+}
+
+@media (max-width: 991px) {
+  .latestProject__imgContent img {
+    margin-top: 0px;
+    margin-bottom: 30px;
+    margin-left: 0px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 574px) {
+  .latestProject__container {
+    padding: 70px 15px;
+  }
+  .latestProject__title {
+    font-size: 48px;
+    line-height: 62px;
+  }
+  .latestProject__info {
+    margin-right: 15px;
+  }
+}
+
 /*----------------------------------------*/
 /*  RESPONSIVE CSS START
 /*----------------------------------------*/
@@ -2254,6 +3005,3 @@ header .container .head_content .menu .m_bar li:first-child {
 }
 
 /* brand_area part end */
-/* ?? part start */
-/* ?? part end */
-/*# sourceMappingURL=style.css.map */
