--- a/assets/scss/components/_careerBanner.scss
+++ b/assets/scss/components/_careerBanner.scss
@@ -49,6 +49,18 @@
 
 @media (max-width: 767px) {
   .careerTeam {
+    &__contentText {
+      margin-top: 30px;
+    }
+    &__title {
+      font-size: 58px;
+      line-height: 72px;
+    }
+    &__brief {
+      font-size: 16px;
+      line-height: 26px;
+      max-width: 100%;
+    }
     &__contentImg {
       img {
         max-width: 100%;
@@ -63,12 +75,12 @@
 @media (max-width: 574px) {
   .careerTeam {
     &__title {
-      font-size: 48px;
-      line-height: 56px;
+      font-size: 38px;
+      line-height: 42px;
     }
     &__brief {
-      font-size: 18px;
-      line-height: 32px;
+      font-size: 16px;
+      line-height: 24px;
       max-width: 100%;
     }
     &__contentImg {
