--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,6 +293,9 @@ input:required {
     line-height: 56px;
     margin-bottom: 15px;
   }
+  .section__brief {
+    max-width: 90%;
+  }
 }
 
 /* ?? part start */
@@ -2219,7 +2222,6 @@ header .container .head_content .menu .m_bar li:first-child {
 .perks__benefitsBoxes .box:hover {
   border-right: 1px solid #e2e3e4;
   transform: scale(1.2);
-  box-shadow: 0px 20px 41px -24px rgba(0, 0, 0, 0.64);
 }
 
 .perks__benefitsBoxes .box img {
@@ -2359,15 +2361,30 @@ header .container .head_content .menu .m_bar li:first-child {
   }
 }
 
+@media (max-width: 575px) {
+  .positions {
+    padding-top: 0px !important;
+  }
+  .positions__type .point {
+    display: block;
+    opacity: 0;
+  }
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .positions__type {
-    font-size: 18px;
-    line-height: 28px;
-    margin-top: 30px;
+    font-size: 16px;
+    line-height: 24px;
+    margin-top: 15px;
+    margin-bottom: 10px;
   }
   .positions__responsiblity {
     font-size: 16px;
     line-height: 28px;
+  }
+  .positions__contentBox {
+    padding-top: 25px;
+    padding-bottom: 30px;
   }
 }
 
