--- a/assets/scss/components/_perks.scss
+++ b/assets/scss/components/_perks.scss
@@ -27,7 +27,7 @@
       &:hover {
         border-right: 1px solid #e2e3e4;
         transform: scale(1.2);
-        box-shadow: 0px 20px 41px -24px rgba(0, 0, 0, 0.64);
+        // box-shadow: 0px 20px 41px -24px rgba(0, 0, 0, 0.64);
       }
       img {
         margin-bottom: 18px;
