--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1935,12 +1935,16 @@ header .container .head_content .menu .m_bar li:first-child {
   padding: 20px;
 }
 
-.articles__title {
+.articles__title a {
   font-size: 20px;
   line-height: 28px;
   font-weight: 600;
   text-transform: capitalize;
   color: #3e424b;
+}
+
+.articles__title a:hover {
+  text-decoration: underline;
 }
 
 .articles__brief {
@@ -2140,6 +2144,9 @@ header .container .head_content .menu .m_bar li:first-child {
   .careerDetails__contentBox {
     margin: 0px 15px;
   }
+  .careerDetails__postTitleBox {
+    padding-top: 0px;
+  }
 }
 
 @media (min-width: 320px) and (max-width: 574px) {
@@ -2149,6 +2156,20 @@ header .container .head_content .menu .m_bar li:first-child {
   }
   .careerDetails__contentBox {
     padding: 30px 0px 0px 0px;
+  }
+  .careerDetails__contentBox-point {
+    margin-left: 20px !important;
+  }
+  .careerDetails__type {
+    font-size: 16px;
+    line-height: 16px;
+  }
+  .careerDetails__type .point {
+    display: block;
+    opacity: 0;
+  }
+  .careerDetails__go {
+    margin-top: 45px;
   }
 }
 
